--- a/index.html
+++ b/index.html
@@ -43,14 +43,11 @@ layout: default
 <main>
   <div class="home-page">
     <div>
-      <h1>Hi, I'm Rayyan.</h1>
+      <h1>The Work In Progress with Saleha Baqir</h1>
       <p>
-        Welcome to my personal website! This website is dedicated to sharing my
-        learning journey, and Data Analytics is my go-to topic. But wait! Just
-        to let you know, I also write about other topics if you find the realms
-        of Data Analytics less enjoyable.
+        Life is a work in progress. Everyone's progress is different, and I want to talk about it. Let's combine ideas, share truths and trust the process we're in.
       </p>
-      <a href="{{ site.baseurl }}/about/" class="home-button">About Me</a>
+      <a href="https://open.spotify.com/show/5MN3CeXAKGwo7OF5HOuT5x" class="home-button">Listen Now</a>
     </div>
     <div>
       <img
