--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ layout: default
     </div>
     <div>
       <img
-        src="assets\images\vecteezy_hand-drawn-doodle-waves-clip-art_221846562.png"
+        src="assets/images/yellowcircle.jpg"
       />
     </div>
   </div>
